# recode

./: .gitignore  CLAUDE.md  README.md  RSI_Recursive_Self_Improvement_Research.md  pyproject.toml  run_experiments.sh
docs/: EVAL_GUIDE.md  safety_benchmarks.md  search_strategies.md
docs/plans/: 2026-03-07-reliable-rsi-design.md
results/baseline_20260312_213509/: trajectory.json
results/baseline_20260312_213509/claude/S1/: eval.json  traces.json
results/baseline_20260312_213509/claude/S2/: eval.json  traces.json
results/baseline_20260312_213509/codex/S1/: eval.json  traces.json
results/baseline_20260312_213509/codex/S2/: eval.json  traces.json
results/baseline_20260313_092822/: trajectory.json
scripts/: demo_sampler.py  download_datasets.py  run_baseline.py  run_gdpval_eval.py  run_safety_eval.py  sample_gdpval.py
src/custom_harness/: __init__.py  agent.py  config.py  loop.py  prompt.py  tools.py
src/data/: __init__.py  registry.py  sampler.py  types.py
src/data/loaders/: agent_safety_bench.py  agentharm.py  asb.py  base.py  gdpval.py  harmbench.py  ifeval.py  or_bench.py  simpleqa.py  toolemu.py  truthfulqa.py
src/data/splitters/: safety_zipper.py  zipper.py
src/eval/: __init__.py  runner.py  visualize.py
src/eval/agents/: __init__.py  base.py  claude_code.py  codex.py  custom.py  gemini_cli.py
src/eval/evaluators/: base.py  gdpval.py  gdpval_judge.py  safety_judge.py
src/evolve/: README.md  cli.py  config.py  evaluator.py  run_evolve.py  seed_agent.py  slices.py
src/evolve/seeds/: __init__.py  anthropic.py  gemini.py  openai.py
(+54 files in other folders)
